--- a/requirements-minimal.txt
+++ b/requirements-minimal.txt
@@ -1,9 +1,12 @@
+# Minimal requirements without OpenCV
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-opencv-python-headless==4.8.1.78
 pillow==10.1.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
-pytest==7.4.3
 pydantic==2.5.0
 numpy==1.24.3
+scikit-image==0.22.0  # Much smaller than OpenCV!
+
+# Optional: For testing
+# pytest==7.4.3
