Add missing dependencies (numpy, pydantic) to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,8 @@ opencv-python-headless==4.8.1.78
 pillow==10.1.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
-pytest==7.4.3
+pydantic==2.5.0
+numpy==1.24.3
+
+# Development only (optional)
+# pytest==7.4.3
