Add garment masking API with sacred-38 processing

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,12 @@ tmp/
 # Images (for testing)
 test_images/
 uploads/
+
+# IMPORTANT: Ignore ALL markdown files (strategy/documentation)
+*.md
+*.MD
+*.markdown
+*.MARKDOWN
+
+# But we might want to keep README.md visible, so explicitly include it
+!README.md
