--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-opencv-python-headless==4.8.1.78
-pillow==10.1.0
-python-multipart==0.0.6
-python-dotenv==1.0.0
-pydantic==2.5.0
+opencv-python==4.8.1.78
 numpy==1.24.3
-
-# Development only (optional)
-# pytest==7.4.3
+requests==2.31.0
+python-multipart==0.0.6
